; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/md/cart/extr_ssp16.c_read_XST.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/md/cart/extr_ssp16.c_read_XST.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_SVP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"XST raw r %04x @ %04x\00", align 1
@rXST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @read_XST to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @read_XST() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = call i64 @pm_io(i32 3, i32 0, i32 0)
  store i64 %3, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp ne i64 %4, -1
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i64, i64* %2, align 8
  store i64 %7, i64* %1, align 8
  br label %14

8:                                                ; preds = %0
  %9 = load i32, i32* @EL_SVP, align 4
  %10 = load i64, i64* @rXST, align 8
  %11 = call i32 (...) @GET_PPC_OFFS()
  %12 = call i32 @elprintf(i32 %9, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i64 %10, i32 %11)
  %13 = load i64, i64* @rXST, align 8
  store i64 %13, i64* %1, align 8
  br label %14

14:                                               ; preds = %8, %6
  %15 = load i64, i64* %1, align 8
  ret i64 %15
}

declare dso_local i64 @pm_io(i32, i32, i32) #1

declare dso_local i32 @elprintf(i32, i8*, i64, i32) #1

declare dso_local i32 @GET_PPC_OFFS(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
